Added NAV and Footer from components

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- header/ navbar ----------- -->
     <section class="navigation">
-        <div class="nav-container">
+        <!-- <div class="nav-container">
             <div class="brand">
                 <a href="#!">Logo</a>
             </div>
@@ -40,7 +40,7 @@
                     </li>
                 </ul>
             </nav>
-        </div>
+        </div> -->
     </section>
     <header>
         <div class="carousel">
@@ -98,7 +98,7 @@
 
     <!-- Start Footer bottom Area -->
     <footer>
-        <div class="footer-box">
+        <!-- <div class="footer-box">
             <ul>
                 <li><a href="https://www.linkedin.com/in/iamgauhar" target="_blank"><i class='bx bxl-linkedin-square'
                             style='color:#0458ce'></i></a></li>
@@ -118,12 +118,12 @@
                     &copy; Copyright 2019. | <strong><a href="#">ABC Technologies Pvt. Ltd. </a></strong> | All Rights
                     Reserved.
                 </p>
-            </div>
+            </div> -->
     </footer>
 </body>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
     integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-<script src="./scripts/utility.js"></script>
+<script type="module" src="./scripts/utility.js"></script>
 
 </html>
